@@ -47,6 +47,7 @@ version <next>:
 - SAP (Session Announcement Protocol, RFC 2974) muxer and demuxer
 - cropdetect filter
 - ffmpeg -crop* options removed
+- transpose filter added
 
 
 version 0.6:
